# ecomerce

./: .env.docker.example  .gitignore  Dockerfile.server  README.md  docker-compose.yml
.playwright-mcp/: page-2026-05-19T17-00-32-210Z.yml  page-2026-05-19T17-00-42-236Z.yml
admin/: Dockerfile  jest.config.cjs  nginx.conf  package-lock.json  package.json  tsconfig.jest.json  vite.config.ts
admin/src/: App.tsx  index.css
chatbot/: .env.example  Dockerfile  README.md  pyproject.toml
chatbot/app/: main.py
chatbot/app/api/: chat.py  dependencies.py
chatbot/app/core/: config.py
chatbot/app/jobs/: sync_knowledge.py  sync_products.py
chatbot/app/schemas/: chat.py
chatbot/app/services/: chat_service.py  conversation_store.py  ecommerce_client.py  indexing.py  knowledge.py  llm.py  nvidia_retrieval.py  retrieval.py  vector_store.py  voyage.py
chatbot/data/: chatbot.sqlite3
chatbot/data/chroma/e3913033-b420-4023-8684-bc7eead4b2cb/: index_metadata.pickle
chatbot/tests/: test_chat_api.py  test_chat_service_intent.py  test_conversation_store.py  test_ecommerce_client.py  test_indexer_limits.py  test_indexer_retry.py  test_indexing.py  test_knowledge_indexer.py  test_llm_fallback.py  test_nvidia_retrieval.py  test_retrieval.py  test_retrieval_provider_config.py  test_vector_store.py  test_voyage.py
client/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
client/tests/: cart.spec.ts  catalog.spec.ts
server/: .gitignore  API_SUMMARY.md  MIGRATION_NOTES.md  docker-compose.yml  pom.xml
(+598 files in other folders)
